# bmm

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  TERMUX.md  deny.toml  dist-workspace.toml  docker-compose.yml
.github/: actionlint.yml
.sqlx/: query-04fa957844fe1684e78f5361f0556eddaa34f1e96fac57e985ec2cd857c4114a.json  query-1ad2b41b434ea5de879c3b0691402c0eaafe1eafb1ecf8f8253aa920091d7dd6.json  query-1ae841249d5f7f2850246531c1bd6f508aa0ce2f3e99502279cd1d191fbe9375.json  query-4b822e688a6be4a9a6b33dec956e3455af857af5837929b07ecc67400fcfd0da.json  query-505d5749d2d5f323c8e5d8f8691ea192f5cbf65139f3d63610d2ea93372edf99.json  query-5eb0463f1eb767bac0e8ea67ae2b3a9abcb327fef2feaba997c3cdde27d09bc1.json  query-6b26146f0910fa9f7a9dc6bb553e0eefaa743567f15fda1ebfd7083bf3bd957e.json  query-77ca1c6680321890f5b4fcfd60fbabaa7e61fe8a487dfbda5e89fc6c54a05272.json  query-82f4a83fe962e2d070c5b19db0c4f976493ca5eb3ed97a4ca7137970e4eb9216.json  query-8be126934cd3b27112637e219bb305edb05f933700346179504e45f2dde8bc4a.json  query-9085329c5b0a5697887526021fafda62ba67d16d44e19b31df8afe4c2f74261b.json  query-93d7cef98773a2a4e83fbc22516bdd6888b94ce2b441d9c4d01fa3486b93c41e.json  query-9a4571f59d7441ba64d040eb528b09dbad85c4ea9ea3b6696128b770345355f7.json  query-a95adf4a2adaed13581e09d46163a16dddfead2b229797ef9a1c45deae3891eb.json  query-b0ba67ed139a0bd24dbeeec12ab2b8ef417f085d59eebf05ac93e69d78079359.json  query-b6975be98860dff9d5ba7f12faedfd43e4b410c877cc498eb62142c374aedd6b.json  query-bacb3ca4fbb8c3ac845c41164a11a622cf0679134a061d557b5f0235756e7128.json  query-d1b7d6e09b58eda92db618bee0cd204472ff4cc71f7660f3ba1b262d77676e6d.json  query-ed6334a9d919257dce56e5f6d8c4345d1627ebb4936fa06d2da60157249c79e8.json
bench/: bench-against-buku.sh  bench-against-prev-version.sh  generate-data.py
migrations/: 20250203201411_create_initial_tables.sql  20260201000000_add_notes_to_bookmarks.sql  (+1 more)
src/: args.rs  common.rs  errors.rs  (+4 more)
(+71 files in other folders)
