[package]
name = "bmm"
version = "0.3.1"
edition = "2024"
authors = ["Dhruv Thakur"]
repository = "https://github.com/dhth/bmm"
description = "bmm lets you get to your bookmarks in a flash"
homepage = "https://tools.dhruvs.space/bmm/"
license = "MIT"
keywords = [
    "cli",
    "bookmarks",
    "bookmarks-manager",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "bench",
    "tapes",
]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
dirs = "6.0.0"
lazy_static = "1.5.0"
once_cell = "1.21.4"
ratatui = "0.30.0"
regex = "1.12.3"
select = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", default-features = false,  features = ["json", "macros", "migrate", "runtime-tokio", "sqlite"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tui-input = "0.15.3"
url = { version= "2.5.8", features = ["serde"] }
which = "8.0.2"

# Desktop-only deps: arboard needs an X11/Wayland/Win32/Cocoa windowing
# system to even compile its clipboard backend, which doesn't exist (and
# isn't needed) on Android/Termux. `open` is skipped there too since
# `xdg-open` etc. don't exist on Termux; we shell out to termux-open-url
# instead (see src/platform.rs).
[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = { version = "3.6.1", default-features = false }
open = "5.3.5"

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml"] }
insta-cmd = "0.6.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
